unpackaged/main/default/objects/Tekmir_API_Settings__c/Tekmir_API_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Tekmir API Settings</label>
</CustomObject>