unpackaged/main/default/objects/Tekmir_API_Settings__c/fields/Log_Levels__c.field-meta.xml
<CustomField>
    <fullName>Log_Levels__c</fullName>
    <label>Log Levels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>