unpackaged/main/default/objects/Tekmir_API_Settings__c/fields/Named_Credentials_Prod__c.field-meta.xml
<CustomField>
    <fullName>Named_Credentials_Prod__c</fullName>
    <label>Named Credentials (Prod)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>