unpackaged/main/default/objects/Tekmir_API_Settings__c/fields/Test_mode__c.field-meta.xml
<CustomField>
    <fullName>Test_mode__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable &quot;Test mode&quot; to submit new matter and document to Tekmir Staging API</description>
    <inlineHelpText>Enable &quot;Test mode&quot; to submit new matter and document to Tekmir Staging API</inlineHelpText>
    <label>Test mode?</label>
    <type>Checkbox</type>
</CustomField>